--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,6 +4,7 @@ html
     meta(charset="utf-8")
     title #{title}
     link(rel="stylesheet", href="/css/semantic.min.css")
+    block link
     link(rel="stylesheet", href="/css/main.css")
     script(src="/js/jquery-3.2.1.min.js")
   body
