--- a/views/pages/article.pug
+++ b/views/pages/article.pug
@@ -1,6 +1,10 @@
 //- 文章详情页
 extends ../layout.pug
 
+block link
+  link(rel="stylesheet",href="//cdn.bootcss.com/quill/1.2.4/quill.snow.min.css")
+  link(rel="stylesheet", href="//cdn.bootcss.com/highlight.js/9.11.0/styles/monokai-sublime.min.css")
+
 block content
   //- 最左侧侧边栏
   include ../components/sidebar.pug
@@ -9,11 +13,11 @@ block content
     //- 顶部导航
     include ../components/header.pug
     //- 文章主体内容
-    article.ui.text.container
+    article.ui.text.container.ql-snow
       h1.ui.header #{title}
       div.article__label
         span.ui.orange.basic.label 时间·#{updatetime}
         div.ui.labeled.tiny.button(tabindex="0")
           div.ui.orange.tiny.button!= '<i class="heart icon"></i>Like'
           a.ui.basic.orange.tiny.left.pointing.label #{likes}
-      div.content__article!= content
+      div.content__article.ql-editor!= content
